--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="bg-secondary bg-gradient text-white">
     <nav class="navbar navbar-dark bg-success">
       <div class="container-fluid">
-        <a class="navbar-brand">Mi SUper Agenda</a>
+        <a class="navbar-brand">Mi SUpesr Agenda</a>
         <form class="d-flex">
           <div id="iniciar-btn" class="g-signin2" data-onsuccess="onSignIn"></div>
           <button id="cerrar-btn" type="button" class="btn btn-link link-light">Cerrar Sesión</button>
